<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">BLE Spam</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_required">Permission required</string>
    <string name="ok" translatable="false">ok</string>
    <string name="samsung_easypair_watch" translatable="false">Samsung EasyPair Watch</string>
    <string name="windows_swiftpair" translatable="false">Windows SwiftPair</string>
    <string name="samsung_easypair_buds" translatable="false">Samsung EasyPair Buds</string>
    <string name="android_fastpair" translatable="false">Android FastPair</string>
    <string name="apple_device_popup" translatable="false">Device Popup</string>
    <string name="apple_notyour_device_popup" translatable="false">Not Your Device Popup</string>
    <string name="vzhuh_popup">Vzhuh (Volna)</string>
    <string name="apple_action_modal" translatable="false">Action Modal</string>
    <string name="ios_17_crash" translatable="false">iOS 17 Crash</string>
    <string name="ios_title" translatable="false">iOS</string>
    <string name="android_title" translatable="false">Android and Samsung</string>
    <string name="windows_title" translatable="false">Windows</string>
    <string name="thanks_to_willy_jl_spooks4576_and_ecto_1a">Thanks to @Willy-JL, @Spooks4576, @ECTO-1A</string>
    <string name="dev_by_tutozz_and_ars3nb">Dev by @tutozz, @ars3nb(@ars2nb)</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="blink_indicator" translatable="false">Blink Indicator</string>
    <string name="update_required_title">Update Required</string>
    <string name="update_available_title">Update Available</string>
    <string name="update_message">Your version is outdated. Please update to %1$s\n\nWhat\'s New:\n%2$s</string>
    <string name="update_available_message">New version: %1$s\n\nWhat\'s New: \n%2$s</string>
    <string name="update_button">Update</string>
    <string name="later_button">Later</string>
    <string name="update_check_failed">Failed to check for updates</string>
    <string name="update_type_release">Release</string>
    <string name="bluetoothoff">Bluetooth is off. Please turn it on.</string>
    <string name="bluetoothoff_spammeroff">Bluetooth is off. Spammer stopped.</string>
    <string name="swiftpair">Failed to initialize SwiftPairSpam</string>
    <string name="bluetoothon">Bluetooth is now enabled.</string>
    <string name="bluetootherror">Bluetooth enabling failed.</string>
    <string name="perscan">Permission is required to scan Bluetooth devices</string>
    <string name="ba_failed">Failed: Not Ready</string>
    <string name="ba_astop">Advertising stopped</string>
    <string name="social">Our Social Networks</string>
    <string name="error_empty_description">Please describe the issue</string>
    <string name="message_sent">Message sent</string>
    <string name="send_error">Send error: %1$d</string>
    <string name="exception_error">Error: %1$s</string>
    <string name="send_button_text">Send</string>
    <string name="bug_report">Bug Report</string>
    <string name="please_wait">Please wait before the next sending</string>
    <string name="app_version">Version: %s</string>
    <string-array name="available_language_names" tools:ignore="InconsistentArrays">
        <item>العربية</item>
        <item>中文</item>
        <item>Polski</item>
        <item>Nederlands</item>
        <item>English</item>
        <item>Français</item>
        <item>Deutsch</item>
        <item>हिन्दी</item>
        <item>Italiano</item>
        <item>日本語</item>
        <item>한국어</item>
        <item>فارسی</item>
        <item>Português</item>
        <item>Русский</item>
        <item>Español</item>
        <item>Türkçe</item>
        <item>Українська</item>
        <item>Беларуская</item>
        <item>Қазақша</item>
    </string-array>
    <string-array name="available_language_codes" tools:ignore="InconsistentArrays">
        <item>ar</item>
        <item>zh</item>
        <item>pl</item>
        <item>nl</item>
        <item>en</item>
        <item>fr</item>
        <item>de</item>
        <item>hi</item>
        <item>it</item>
        <item>ja</item>
        <item>ko</item>
        <item>fa</item>
        <item>pt</item>
        <item>ru</item>
        <item>es</item>
        <item>tr</item>
        <item>uk</item>
        <item>be</item>
        <item>kk</item>
    </string-array>
    <string name="lang">Language</string>
    <string name="logo_animation">Logo animation</string>
    <string name="bug_report_title">Bug Report</string>
    <string name="char_counter_format">%1$d/%2$d</string>
    <string name="sending_button_text">Sending...</string>
    <string name="empty_description_error">Description cannot be empty</string>
    <string name="char_limit_exceeded">Character limit exceeded (%1$d)</string>
    <string name="report_sent_success">Report successfully sent</string>
    <string name="server_error">Server error: %1$s</string>
    <string name="connection_error">Connection error: %1$s</string>
    <string name="unknown_error">Unknown error</string>
    <string name="no_network_connection">No network connection available</string>
    <string name="insufficient_storage">Insufficient storage space</string>
    <string name="invalid_download_url">Invalid download URL</string>
    <string name="download_failed">Download failed: %1$s</string>
    <string name="download_completed">Download completed</string>
    <string name="error_progress_bar">Error: Progress bar not available</string>
    <string name="error_progress_display">Error: Progress display not available</string>
    <string name="download_cancelled">Download cancelled or not found</string>
    <string name="invalid_file_uri">Invalid file URI</string>
    <string name="file_access_error">Could not access downloaded file</string>
    <string name="invalid_apk_file">Downloaded file is invalid</string>
    <string name="file_provider_error">Error preparing file for installation</string>
    <string name="no_install_app">No app found to install APK</string>
    <string name="installation_failed">Installation failed: %1$s</string>
    <string name="install_permission_denied">Install permission denied</string>
    <string name="download_start_failed">Failed to start download</string>
    <string name="progress_bar_not_found">ProgressBar not found in update dialog layout</string>
    <string name="progress_container_not_found">Progress container not found in update dialog layout</string>
    <string name="progress_text_not_found">Progress text not found in update dialog layout</string>
    <string name="update_dialog_error">Error: Unable to show update dialog</string>
    <string name="http_data_error">Network data error</string>
    <string name="unhandled_http_code">Unexpected HTTP code</string>
    <string name="file_error">File error</string>
    <string name="unknown_download_status">Unknown download status: %1$d</string>
    <string name="download_not_found">Download not found</string>
    <string name="download_error">Error checking download: %1$s</string>
    <string name="download_title">BLE Spam Update</string>
    <string name="download_description">Downloading version %1$s</string>
    <string name="progress_text">%1$d%% (%2$d KB/s)</string>
    <string name="delay_text" translatable="false">%1$dms</string>
    <string name="download_paused">Download Paused</string>
    <string name="download_pending">Download Pending</string>
    <string name="invalid_file_path">Invalid file path</string>
    <string name="unsupported_uri_scheme">Unsupported URI scheme</string>
    <string name="installation_error">Error preparing installation: %1$s</string>
    <string name="blocked_version_message">Your application version (%1$s) is locked. Please update the application to the latest version.\n\n\n\nRelease Notes: %2$s</string>
    <string name="bluetooth_permission_denied">Bluetooth permission is not granted</string>
    <string name="permissions_denied">permission is not granted</string>
    <string name="no_browser_found">No browsers found</string>
    <string name="save">Save</string>
    <string name="cooldown_error">Please wait %d seconds before sending another report.</string>
    <string name="theme">Theme</string>
    <string name="theme_auto">Auto (Device Theme)</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="all_spammers_stopped">All spammers stopped</string>
    <string name="unknown_command">Unknown command</string>
    <string name="spammer_started">Spammer %s started</string>
    <string name="spammer_not_found">Spammer not found</string>
    <string name="connection_error_generic">Failed to send bug report</string>
    <string name="server_error_generic">Failed to send bug report</string>
    <string name="notifications_permission_required">Notification permission is required</string>
    <string name="material_switch" translatable="false">Material Design</string>
    <string name="xiaomiquickconnect" translatable="false">Xiaomi Quick Connect</string>
    <string name="bluetooth_permission_required">Bluetooth permission is required</string>
    <string name="storage_permission_granted">Storage permission granted</string>
    <string name="storage_permission_denied">Storage permission denied</string>
    <string name="notifications_permission_denied">Notification permission denied</string>
    <string name="bluetooth_not_supported">Bluetooth not supported</string>
    <string name="settings">Settings\n</string>
    <string name="ble_spam_notification_no_spammers">No active spammers</string>
    <string name="ble_spam_notification_active_one">Active: %1$s</string>
    <string name="ble_spam_notification_title_idle">BLE Spam</string>
    <string name="ble_spam_notification_title_one">BLE Spam enabled</string>
    <plurals name="ble_spam_notification_title_many">
        <item quantity="one">BLE Spam (%d active)</item>
        <item quantity="few">BLE Spam (%d active)</item>
        <item quantity="many">BLE Spam (%d active)</item>
        <item quantity="other">BLE Spam (%d active)</item>
    </plurals>
    <string name="ble_spam_notification_action_stop">Stop</string>
    <string name="ble_spam_channel_name">BLE Spam status</string>
    <string name="ble_spam_channel_description">BLE Spam operation status</string>
    <string name="beta_version_title">WARNING</string>
    <string name="beta_version_message">This version of the application is intended exclusively for testing.\n\nPublication or distribution of this version on the internet is prohibited and will result in exclusion from the beta testing program.</string>
    <string name="beta_version_close_button">Close</string>
    <string name="beta_version_close_button_timer">Close (%1$d)</string>
    <string name="bluetooth_enable_notification">Bluetooth is off. Please turn it on to use BLE Spam.</string>
    <string name="_20ms" translatable="false">20ms</string>
</resources>

