<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:fitsSystemWindows="true"
    android:background="?android:attr/colorBackground">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/blink_indicator"
        app:tint="?attr/colorPrimary" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bug_report"
        android:textColor="?attr/colorPrimary"
        android:textSize="24sp"
        android:fontFamily="@font/notosans_extrabold"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/titleText"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rounded_edittext"
        android:gravity="top|start"
        android:hint="@string/error_empty_description"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="14sp"
        android:fontFamily="@font/notosans"
        android:inputType="textMultiLine"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/charCountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:text="0/0"
        android:layout_marginTop="10dp"
        android:textColor="?attr/colorPrimary"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/charCountText"
        android:layout_marginTop="8dp"
        android:textColor="?attr/colorError"
        android:textSize="14sp"
        android:fontFamily="@font/notosans"
        android:visibility="gone" />

    <Button
        android:id="@+id/sendButton"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/errorText"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/send_button_text"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="18sp"
        android:fontFamily="@font/notosans_extrabold" />

</RelativeLayout>